--- a/src/resources/css/themes/Black_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Black_nm/NinjamWindow.css
@@ -67,13 +67,13 @@ NinjamTrackView[horizontal="true"]
         stop:1 rgb(20, 20, 20));
 }
 
-NinjamTrackView[unlighted="true"][horizontal="true"] QSlider::handle:horizontal
+NinjamTrackView[unlighted="true"][horizontal="true"] #levelSlider::handle:horizontal
 {
     border: rgb(140, 140, 140);
     background: rgb(80, 80, 80);
 }
 
-NinjamTrackView[horizontal="true"] QSlider::handle:horizontal
+NinjamTrackView[horizontal="true"] #levelSlider::handle:horizontal
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
     border: 1px outset rgb(30, 30, 30);
