--- a/src/resources/css/common/BaseTrack.css
+++ b/src/resources/css/common/BaseTrack.css
@@ -54,22 +54,6 @@ QPushButton#buttonStereoInversion:checked
 }
 
 
-/* The small label used to show the max peak below peak meters
---------------------------------------------------------------*/
-
-BaseTrackView #peaksDbLabel
-{
-    font-size: 8px;
-    qproperty-alignment: AlignCenter;
-    color: rgba(0, 0, 0, 120);
-    padding: 1px;
-    min-width: 15px;
-}
-BaseTrackView #peaksDbLabel:hover{
-    background-color: rgba(255,255,255, 30);
-    color: black;
-}
-
 /* Pan slider and LR labels
 ----------------------------*/
 #panSlider
@@ -79,16 +63,24 @@ BaseTrackView #peaksDbLabel:hover{
 }
 
 #labelPanR,
-#labelPanL{
+#labelPanL
+{
     color: rgba(0, 0, 0, 160);
     font-size: 9px;
 }
 
 BaseMeter
 {
-    min-width: 4px;
-    min-height: 4px;
+    min-width: 15px;
+    min-height: 15px;
     background-color: rgba(0, 0, 0, 20);
+}
+
+AudioMeter
+{
+    qproperty-dBMarksColor: black;
+    border: 1px solid rgb(0, 0, 0, 30);
+    font-size: 8px;
 }
 
 /*
