--- a/src/resources/css/themes/Volcano_nm/BaseTrack.css
+++ b/src/resources/css/themes/Volcano_nm/BaseTrack.css
@@ -96,7 +96,6 @@ BaseTrackView[unlighted="true"] #buttonBoost:checked
     border-top: none;
     border-style: solid;
     border-color: rgba(0, 0, 0, 60);
-    color: rgb(254, 181, 102);
 }
 
 #soloButton, #muteButton
@@ -135,21 +134,6 @@ BaseTrackView[unlighted="true"] #buttonBoost:hover:checked
 {
     background-color: #e56318;
 }
-
-/* Small Label used to show max peak below peak meters
--------------------------------------------------------*/
-BaseTrackView #peaksDbLabel
-{
-    border: 1px solid rgba(0, 0, 0, 8);
-    background-color: rgba(0, 0, 0, 6);
-}
-
-BaseTrackView[unlighted="true"] #peaksDbLabel
-{
-   border: none;
-   background-color: rgba(0, 0, 0, 10);
-}
-
 
 BaseTrackView
 {
@@ -195,12 +179,10 @@ BaseTrackView[unlighted="true"] #levelSlider::handle:hover
     background-color: rgb(217, 157, 116);
 }
 
-PeakMeter
+AudioMeter
 {
-    background-color: rgba(0, 0, 0, 6);
-    border: none;
+    qproperty-dBMarksColor: black;
 }
-
 
 /* TrackGroup - used as container for subchannels
 ---------------------------------------------------*/
