--- a/src/resources/css/themes/Volcano_nm/General.css
+++ b/src/resources/css/themes/Volcano_nm/General.css
@@ -333,16 +333,14 @@ QTabWidget::pane
 AudioMeter
 {
     /* changing Audio Peak meter custom CSS properties */
-    qproperty-rmsColor: rgb(190, 90, 29);
+    qproperty-rmsColor: rgb(181, 37, 3);
     qproperty-peakStartColor: orange;
     qproperty-peakEndColor: red;
     qproperty-maxPeakColor: rgb(190, 90, 20);
 }
 
-AudioMeter#masterMeterL,
-AudioMeter#masterMeterR,
-NinjamPanel #peakMeterLeft,
-NinjamPanel #peakMeterRight
+AudioMeter#masterMeter
+NinjamPanel #peakMeter
 {
     qproperty-peakStartColor: rgb(190, 90, 29);
 }
