--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -83,6 +83,7 @@
         <file alias="qtbase_pl.qm">../../translations/Qt/qtbase_pl.qm</file>
         <file alias="qtbase_es.qm">../../translations/Qt/qtbase_es.qm</file>
         <file alias="qtbase_pt.qm">../../translations/Qt/qtbase_pt.qm</file>
+        <file alias="qtbase_da.qm">../../translations/Qt/qtbase_da.qm</file>
     </qresource>
     <qresource prefix="/images">
         <file>loop.png</file>
