Fixing duplicated translations (fix #838)

--- a/src/Common/gui/JamRoomViewPanel.ui
+++ b/src/Common/gui/JamRoomViewPanel.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>RoomViewPanel</class>
- <widget class="QWidget" name="RoomViewPanel">
+ <class>JamRoomViewPanel</class>
+ <widget class="QWidget" name="JamRoomViewPanel">
   <property name="geometry">
    <rect>
     <x>0</x>
