Improving vertical space usage in chat messages

--- a/src/Common/gui/chat/ChatMessagePanel.ui
+++ b/src/Common/gui/chat/ChatMessagePanel.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>256</width>
-    <height>239</height>
+    <height>96</height>
    </rect>
   </property>
   <property name="focusPolicy">
@@ -16,7 +16,7 @@
   <property name="windowTitle">
    <string notr="true"/>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -89,6 +89,12 @@
    </item>
    <item>
     <widget class="ChatTextEditor" name="labelMessage">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>1</verstretch>
+      </sizepolicy>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
@@ -109,30 +115,6 @@ p, li { white-space: pre-wrap; }
       <string notr="true"/>
      </property>
     </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item alignment="Qt::AlignBottom">
-      <widget class="QLabel" name="labelTimeStamp">
-       <property name="text">
-        <string notr="true">08:14:53</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
    </item>
   </layout>
  </widget>
