adding Kosovo flag

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -389,6 +389,7 @@
         <file>flags/wales.png</file>
         <file>flags/wf.png</file>
         <file>flags/ws.png</file>
+        <file>flags/xk.png</file>
         <file>flags/ye.png</file>
         <file>flags/yt.png</file>
         <file>flags/za.png</file>
