Xmiting and receiving video
- Left panel using full height
- Showing default camera (if available) in local controls
- Adding video codec test and FFMpeg wrappers
- Integranting FFMpeg wrapper in JamTaba projects
- Removing QCameraImageCapture
- Sending encoded video data
- Adding fake camera
- Rendering received video intervals
- Crashing when re-using encoder

--- a/src/resources/css/common/MainWindow.css
+++ b/src/resources/css/common/MainWindow.css
@@ -80,3 +80,12 @@ QTabWidget::tab-bar
 {
     left: 0;
 }
+
+FakeCameraView
+{
+    color: rgba(0, 0, 0, 180);
+    background-color: rgba(0, 0, 0, 50);
+    font-weight: bold;
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 16px;
+}
