Improving video preview visualization

--- a/src/resources/css/themes/Black_nm/BaseTrack.css
+++ b/src/resources/css/themes/Black_nm/BaseTrack.css
@@ -150,11 +150,11 @@ BaseTrackView[unlighted="true"] #buttonStereoInversion:hover:checked
 
 BaseTrackView
 {
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop:0 rgb(70, 70, 70),
-        stop:1 rgb(30, 30, 30));
+    background: none;
 
     border: none; /*1px solid rgb(61, 61, 61);*/
+    border-right: 1px solid rgba(0, 0, 0, 40);
+    border-left: 1px solid rgba(0, 0, 0, 40);
     font-size: 8px;
 }
 
@@ -201,6 +201,13 @@ AudioMeter
 
 /* TrackGroup - used as container for subchannels
 ---------------------------------------------------*/
+
+TrackGroupView
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop:0 rgb(70, 70, 70),
+    stop:1 rgb(30, 30, 30));
+}
 
 TrackGroupView #topPanel                                /* topPanel is used to show channel name */
 {
