--- a/src/resources/css/themes/Ice/BaseTrack.css
+++ b/src/resources/css/themes/Ice/BaseTrack.css
@@ -150,12 +150,11 @@ BaseTrackView[unlighted="true"] #buttonBoost:hover:checked
 
 BaseTrackView
 {
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-            stop: 0.0 rgb(128, 180, 255),
-            stop: 0.95 rgb(126, 178, 255),
-            stop: 1.0 rgb(71, 166, 219));
+    background-color: none;
 
     border: none; /*1px solid rgb(61, 61, 61);*/
+    border-right: 1px solid rgba(0, 0, 0, 20);
+    border-left: 1px solid rgba(0, 0, 0, 20);
     font-size: 8px;
 }
 
@@ -198,7 +197,11 @@ AudioMeter
 TrackGroupView
 {
     border: none;
-    border-radius: 2px;
+    border-radius: 3px;
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+                stop: 0.0 rgb(128, 180, 255),
+                stop: 0.95 rgb(126, 178, 255),
+                stop: 1.0 rgb(71, 166, 219));
 }
 
 TrackGroupView #topPanel                                /* topPanel is used to show channel name */
