--- a/src/resources/css/themes/Black_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Black_nm/NinjamWindow.css
@@ -200,11 +200,12 @@ background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
     border-top-right-radius: 1px;
 }
 
-NinjamTrackGroupView                        /* ninjam track group. If a ninjamer is using 2 channels they will appear grouped */
+
+/* ninjam track group. If a ninjamer is using 2 channels they will appear grouped */
+NinjamTrackGroupView
 {
     border: 1px solid rgb(140, 140, 140);
 }
-
 
 /** The floating window showing the metronome/interval progress */
 IntervalProgressWindow
