--- a/src/resources/css/themes/Ice/NinjamWindow.css
+++ b/src/resources/css/themes/Ice/NinjamWindow.css
@@ -249,6 +249,7 @@ NinjamPanel QComboBox QAbstractItemView
 NinjamTrackGroupView                        /* ninjam track group. If a ninjamer is using 2 channels they will appear grouped */
 {
     border: 1px solid rgb(130, 130, 130);
+    background-color: rgb(107, 147, 178);  /* setting the background, necessary to show a nice video preview bg color */
 }
 
 NinjamTrackView  #channelName
