--- a/src/resources/css/themes/Rounded/BaseTrack.css
+++ b/src/resources/css/themes/Rounded/BaseTrack.css
@@ -84,12 +84,12 @@ QPushButton#buttonStereoInversion:hover:checked
 
 BaseTrackView
 {
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop:0 rgb(200, 200, 200),
-        stop:0.01 rgb(240, 240, 240),
-        stop:1 rgb(110, 110, 110)
-    );
-   border: none;
+   background: none;
+
+    border: none;
+    border-right: 1px solid rgba(0, 0, 0, 20);
+    border-left: 1px solid rgba(0, 0, 0, 20);
+
    border-radius: 0px;
    border-bottom-left-radius: 2px;
    border-bottom-right-radius: 2px;
@@ -174,6 +174,12 @@ BaseTrackView[unlighted="true"] #buttonStereoInversion:hover
 TrackGroupView
 {
     border-radius: 2px;
+
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+          stop:0 rgb(200, 200, 200),
+          stop:0.01 rgb(240, 240, 240),
+          stop:1 rgb(110, 110, 110)
+    );
 }
 
 TrackGroupView > #topPanel
