Improvig switch on/off in local camera

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -86,8 +86,7 @@
         <file alias="qtbase_da.qm">../../translations/Qt/qtbase_da.qm</file>
     </qresource>
     <qresource prefix="/images">
-        <file>webcam_on.png</file>
-        <file>webcam_off.png</file>
+        <file>webcam.png</file>
         <file>logo.png</file>
         <file>loop.png</file>
         <file>rec.png</file>
