Receiving and transmiting video streams (#893)
* Xmiting and receiving video
- Left panel using full height to allow the camera preview
- Showing default camera (if available) in local controls
- Integranting FFMpeg wrappers
- Saving local videos with multitrack audio
- Adding FFMpeg compiling instructions
- Adding manual test to NinjamWindow, usefull to test tracks layouts and camera preview

--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -86,6 +86,7 @@
         <file alias="qtbase_da.qm">../../translations/Qt/qtbase_da.qm</file>
     </qresource>
     <qresource prefix="/images">
+        <file>webcam.png</file>
         <file>logo.png</file>
         <file>loop.png</file>
         <file>rec.png</file>
@@ -360,7 +361,6 @@
         <file>flags/tf.png</file>
         <file>flags/tg.png</file>
         <file>flags/th.png</file>
-        <file>flags/Thumbs.db</file>
         <file>flags/tj.png</file>
         <file>flags/tk.png</file>
         <file>flags/tl.png</file>
